OpenBurnBarCore/Sources/OpenBurnBarDomainCore/Generated/openburnbar_domain_ffiFFI.h

uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_open(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_seal(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_split_wire(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_wrapping_key(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_expected_session_body_hash(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_key_id(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_keyed_hash_hex(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_normalize_recovery_key(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_pensieve_dedup_hash(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_pensieve_slug_hmac(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_project_memory_doc_id(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_open_vault_key(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_verification_hash(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_wrap_vault_key(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_wrapping_key(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_resolve_aad(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_rewrap_document(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_search(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_search_analyze(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_sha256_hex(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_subscription_doc_id(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_validate_p256_x963_public_key(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_domain_core_abi_version(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_domain_core_source_fingerprint(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_domain_core_version(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_gateway_relay_safety_code(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_hkdf_sha256(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_hmac_sha256(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_hpke_v3_info(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_key_wrap_info_v1(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_key_wrap_info_v2(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_open_base64(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_open_combined(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_ratchet_envelope_aad(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_ratchet_prekey_shared_secret(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_relay_aad(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_seal_base64(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_seal_combined(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_hermes_sha256(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_is_legacy_kimi_wire_event(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_parse_anthropic_rate_limit_headers(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_parse_claude_statusline_quota(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_parse_codex_usage_quota(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_parse_cursor_usage_quota(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_pensieve_deterministic_embed(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_pensieve_deterministic_embed_and_cloak(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_pensieve_vector_cloak(void

);
uint16_t uniffi_openburnbar_domain_ffi_checksum_func_price_legacy_kimi_wire_event(void

);
uint32_t ffi_openburnbar_domain_ffi_uniffi_contract_version(void

);