tools/openburnbar-mcp/vendor/openburnbar-domain-core-python/openburnbar_domain_ffi.py

_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_open.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_seal.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_seal.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_split_wire.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_split_wire.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_wrapping_key.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_escrow_wrapping_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_expected_session_body_hash.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_expected_session_body_hash.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_key_id.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_key_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_keyed_hash_hex.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_keyed_hash_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_normalize_recovery_key.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_normalize_recovery_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_pensieve_dedup_hash.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_pensieve_dedup_hash.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_pensieve_slug_hmac.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_pensieve_slug_hmac.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_project_memory_doc_id.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_project_memory_doc_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_open_vault_key.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_open_vault_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_verification_hash.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_verification_hash.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_wrap_vault_key.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_wrap_vault_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_wrapping_key.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_recovery_wrapping_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_resolve_aad.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_resolve_aad.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_rewrap_document.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_rewrap_document.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_search.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_search.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_search_analyze.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_search_analyze.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_sha256_hex.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_sha256_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_subscription_doc_id.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_subscription_doc_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_validate_p256_x963_public_key.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_cloud_vault_validate_p256_x963_public_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_domain_core_abi_version.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_domain_core_abi_version.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_domain_core_candidate_commit.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_domain_core_candidate_commit.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_domain_core_source_fingerprint.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_domain_core_source_fingerprint.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_domain_core_version.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_domain_core_version.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_gateway_relay_safety_code.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_gateway_relay_safety_code.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_hkdf_sha256.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_hkdf_sha256.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_hmac_sha256.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_hmac_sha256.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_hpke_v3_info.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_hpke_v3_info.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_key_wrap_info_v1.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_key_wrap_info_v1.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_key_wrap_info_v2.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_key_wrap_info_v2.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_open_base64.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_open_base64.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_open_combined.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_open_combined.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_ratchet_envelope_aad.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_ratchet_envelope_aad.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_ratchet_prekey_shared_secret.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_ratchet_prekey_shared_secret.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_relay_aad.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_relay_aad.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_seal_base64.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_seal_base64.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_seal_combined.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_seal_combined.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_sha256.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_hermes_sha256.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_is_legacy_kimi_wire_event.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_is_legacy_kimi_wire_event.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_parse_anthropic_rate_limit_headers.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_parse_anthropic_rate_limit_headers.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_parse_claude_statusline_quota.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_parse_claude_statusline_quota.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_parse_codex_usage_quota.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_parse_codex_usage_quota.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_parse_cursor_usage_quota.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_parse_cursor_usage_quota.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_pensieve_deterministic_embed.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_pensieve_deterministic_embed.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_pensieve_deterministic_embed_and_cloak.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_pensieve_deterministic_embed_and_cloak.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_pensieve_l2_normalize.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_pensieve_l2_normalize.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_pensieve_vector_cloak.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_pensieve_vector_cloak.restype = ctypes.c_uint16
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_price_legacy_kimi_wire_event.argtypes = (
)
_UniffiLib.uniffi_openburnbar_domain_ffi_checksum_func_price_legacy_kimi_wire_event.restype = ctypes.c_uint16
_UniffiLib.ffi_openburnbar_domain_ffi_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_openburnbar_domain_ffi_uniffi_contract_version.restype = ctypes.c_uint32

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# Public interface members begin here.


class _UniffiConverterUInt32(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u32"
    VALUE_MIN = 0
    VALUE_MAX = 2**32

    @staticmethod
    def read(buf):
        return buf.read_u32()

    @staticmethod
    def write(value, buf):
        buf.write_u32(value)

class _UniffiConverterInt32(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "i32"
    VALUE_MIN = -2**31
    VALUE_MAX = 2**31

    @staticmethod
    def read(buf):
        return buf.read_i32()

    @staticmethod
    def write(value, buf):
        buf.write_i32(value)

class _UniffiConverterUInt64(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u64"
    VALUE_MIN = 0
    VALUE_MAX = 2**64

    @staticmethod
    def read(buf):
        return buf.read_u64()

    @staticmethod
    def write(value, buf):
        buf.write_u64(value)

class _UniffiConverterInt64(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "i64"
    VALUE_MIN = -2**63
    VALUE_MAX = 2**63

    @staticmethod
    def read(buf):
        return buf.read_i64()

    @staticmethod
    def write(value, buf):
        buf.write_i64(value)

class _UniffiConverterDouble(_UniffiConverterPrimitiveFloat):
    @staticmethod
    def read(buf):
        return buf.read_double()

    @staticmethod
    def write(value, buf):
        buf.write_double(value)

class _UniffiConverterBool:
    @classmethod
    def check_lower(cls, value):
        return not not value

    @classmethod
    def lower(cls, value):
        return 1 if value else 0
